--- a/web_pei_tracking/app/views/components/_header.html.erb
+++ b/web_pei_tracking/app/views/components/_header.html.erb
@@ -1,17 +1,18 @@
 <header>
-  <nav class="navbar navbar-light" style="background-color:cadetblue;">
+  <nav class="navbar navbar-default header-style">
     <div class="container">
-      <a class="navbar-brand navbar-light" style="color:white;" href=<%= root_path %>>PeiTracking</a>
+      <a class="navbar-brand navbar-default btn btn-info header-style" href=<%= root_path %>>PeiTracking</a>
       <div class="nav-item">
         <div class="btn-group">
-          <button type="button" class="btn btn-info dropdown-toggle" style="background-color: cadetblue; color: white;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <button type="button" class="btn btn-info dropdown-toggle header-style" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <%= current_user.email %>
           </button>
-          <div class="dropdown-menu">
-            <button class="dropdown-item" type="button">Action</button>
-            <button class="dropdown-item" type="button">Another action</button>
+          <div class="dropdown-menu dropdown-menu-user">
+            <%= link_to 'Add category', new_user_category_path(current_user), class: 'dropdown-item dropdown-item-user' %>
+            <button class="dropdown-item dropdown-item-user" type="button">Add income</button>
+            <button class="dropdown-item dropdown-item-user" type="button">Add expense</button>
             <div class="dropdown-divider"></div>
-            <%= link_to 'Log out', destroy_user_session_path, :method => :delete, class: 'dropdown-item' %>
+            <%= link_to 'Log out', destroy_user_session_path, :method => :delete, class: 'dropdown-item dropdown-item-user' %>
           </div>
         </div>
       </div>
