--- a/web_pei_tracking/app/views/categories/new.html.erb
+++ b/web_pei_tracking/app/views/categories/new.html.erb
@@ -1,1 +1,13 @@
-<%= render 'form' %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <div class="container category-form">
+        <h3>New category</h3>
+        <hr>
+        <%= render 'form' %>
+      </div>
+    </div>
+    <div class="col-md-3"></div>
+  </div>
+</div>
