--- a/web_pei_tracking/app/views/users/show.html.erb
+++ b/web_pei_tracking/app/views/users/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<% @user.categories.each do |category| %>
+    <%= link_to 'Edit', edit_user_category_path(current_user, category)%> <hr>
+<% end %>
