added editing of capitals

--- a/web_pei_tracking/app/views/capitals/edit.html.erb
+++ b/web_pei_tracking/app/views/capitals/edit.html.erb
@@ -1,2 +1,13 @@
-<h1>Capitals#edit</h1>
-<p>Find me in app/views/capitals/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <div class="container category-form">
+        <h3>Add new transaction</h3>
+        <hr>
+        <%= render 'form' %>
+      </div>
+    </div>
+    <div class="col-md-3"></div>
+  </div>
+</div>
