--- a/web_pei_tracking/app/views/components/_header.html.erb
+++ b/web_pei_tracking/app/views/components/_header.html.erb
@@ -8,9 +8,9 @@
             <%= current_user.email %>
           </button>
           <div class="dropdown-menu dropdown-menu-user">
+            <%= link_to 'Profile', root_path, class: 'dropdown-item dropdown-item-user' %>
             <%= link_to 'Add category', new_user_category_path(current_user), class: 'dropdown-item dropdown-item-user' %>
             <%= link_to 'Add transaction', new_user_capital_path(current_user), class: 'dropdown-item dropdown-item-user' %>
-            <button class="dropdown-item dropdown-item-user" type="button">Add expense</button>
             <div class="dropdown-divider"></div>
             <%= link_to 'Log out', destroy_user_session_path, :method => :delete, class: 'dropdown-item dropdown-item-user' %>
           </div>
