--- a/web_pei_tracking/app/views/capitals/_form.html.erb
+++ b/web_pei_tracking/app/views/capitals/_form.html.erb
@@ -1,4 +1,8 @@
 <%= form_for [current_user, @capital.becomes(Capital)] do |f| %>
+    <div class="form-group" hidden>
+      <%= f.radio_button :type, 'Income'%>
+      <%= f.radio_button :type, 'Expense'%>
+    </div>
     <div class="form-group">
       <%= f.label 'Choose a category: ' %>
       <%= f.select :category_id, grouped_options_for_select(@grouped_categories) %>
@@ -18,6 +22,13 @@
       <%= f.label 'Note: ' %>
       <%= f.text_area :note, class: 'form-control'%>
     </div><hr>
-    <%= f.submit 'Submit', class: 'btn btn-outline-warning w-100' %>
+    <div class="form-group row">
+      <div class="col-md-6">
+        <%= link_to 'Cancel', root_path, class: 'btn btn-outline-info w-100' %>
+      </div>
+      <div class="col-md-6">
+        <%= f.submit 'Submit', class: 'btn btn-outline-warning w-100' %>
+      </div>
+    </div>
 <% end %>
 
