--- a/web_pei_tracking/app/views/categories/_form.html.erb
+++ b/web_pei_tracking/app/views/categories/_form.html.erb
@@ -14,5 +14,12 @@
       <%= f.label :title , class: 'col-form-label'%>
       <%= f.text_field :title, class: 'form-control', placeholder: 'Enter title' %>
     </div><hr>
-    <%= f.submit 'Submit', class: 'btn btn-outline-warning w-100' %>
+    <div class="form-group row">
+      <div class="col-md-6">
+        <%= link_to 'Cancel', root_path, class: 'btn btn-outline-info w-100' %>
+      </div>
+      <div class="col-md-6">
+        <%= f.submit 'Submit', class: 'btn btn-outline-warning w-100' %>
+      </div>
+    </div>
 <% end %>
