added showing of categories and pays on user page

--- a/web_pei_tracking/app/assets/stylesheets/categories.scss
+++ b/web_pei_tracking/app/assets/stylesheets/categories.scss
@@ -2,3 +2,15 @@
   margin-top: 30%;
 }
 
+.text-red {
+  color: red;
+}
+
+.text-green {
+  color: green;
+}
+
+.category-link {
+  background-color: white;
+}
+
