--- a/web_pei_tracking/app/views/layouts/application.html.erb
+++ b/web_pei_tracking/app/views/layouts/application.html.erb
@@ -9,8 +9,10 @@
   </head>
 
   <body>
-  <%= render 'components/header' if current_user %>
-
+  <% if current_user %>
+    <%= render 'components/header' %>
+    <%= render 'components/flash' %>
+  <% end %>
   <%= yield %>
   </body>
 </html>
