stylized sign in and sign up

--- a/web_pei_tracking/app/assets/stylesheets/application.scss
+++ b/web_pei_tracking/app/assets/stylesheets/application.scss
@@ -3,7 +3,9 @@
 @import 'categories';
 @import 'users';
 @import 'flash';
+@import 'devise';
 
 body {
   color: cadetblue;
+  font-family: "Comic Sans MS", cursive, sans-serif
 }
