--- a/web_pei_tracking/app/views/capitals/_capital.html.erb
+++ b/web_pei_tracking/app/views/capitals/_capital.html.erb
@@ -7,6 +7,7 @@
   </p>
   <div class="card-footer">
     <%= link_to 'Edit', edit_user_capital_path(current_user, capital), class: 'btn btn-outline-warning category-link' %>
-    <%= link_to 'Delete', edit_user_capital_path(current_user, capital), class: 'btn btn-outline-danger category-link' %>
+    <%= link_to 'Delete', user_capital_path(current_user, capital), method: :delete,
+                data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger category-link' %>
   </div>
 </div>
