--- a/web_pei_tracking/app/views/categories/_category.html.erb
+++ b/web_pei_tracking/app/views/categories/_category.html.erb
@@ -10,6 +10,7 @@
   </p>
   <div class="card-footer">
     <%= link_to 'Edit', edit_user_category_path(current_user, category), class: 'btn btn-outline-warning category-link' %>
-    <%= link_to 'Delete', edit_user_category_path(current_user, category), class: 'btn btn-outline-danger category-link' %>
+    <%= link_to 'Delete', user_category_path(current_user, category), method: :delete,
+        data: { confirm: 'Are you sure?'}, class: 'btn btn-outline-danger category-link' %>
   </div>
 </div>
