--- a/web_pei_tracking/app/views/users/show.html.erb
+++ b/web_pei_tracking/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
         </div>
         <div class="card-footer">
           You can manage your finances, as well as
-          <a href="#">look at the report</a>.
+          <%= link_to 'look at the report', user_report_path(current_user) %>.
         </div>
       </div>
       <div class="manage-block row">
@@ -24,14 +24,24 @@
             <div class="card-header">
               <h3>Categories</h3>
             </div>
+            <% if current_user.categories.empty? %>
+                <div class="card-footer text-muted">
+                  You don't have categories.
+                </div>
+            <% end %>
           </div>
           <%= render partial: 'categories/category', collection: @user.categories %>
         </div>
         <div class="col-md-6">
           <div class="card">
             <div class="card-header">
-              <h3>Transaktions</h3>
+              <h3>Transactions</h3>
             </div>
+            <% if current_user.capitals.empty? %>
+                <div class="card-footer text-muted">
+                  You don't have transactions.
+                </div>
+            <% end %>
           </div>
           <%= render partial: 'capitals/capital', collection: @user.capitals %>
         </div>
