--- a/web_pei_tracking/app/views/capitals/_form.html.erb
+++ b/web_pei_tracking/app/views/capitals/_form.html.erb
@@ -1,3 +1,18 @@
+<% if @capital.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@capital.errors.count, 'error') %> :
+      </h2>
+      <ul>
+        <% @capital.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+    <hr>
+<% end %>
+
+
 <%= form_for [current_user, @capital.becomes(Capital)] do |f| %>
     <div class="form-group" hidden>
       <%= f.radio_button :type, 'Income'%>
@@ -5,18 +20,15 @@
     </div>
     <div class="form-group">
       <%= f.label 'Choose a category: ' %>
-      <%= f.select :category_id, grouped_options_for_select(@grouped_categories) %>
+      <%= f.grouped_collection_select :category_id, [['Income',@incomes], ['Expense', @expenses]], :second, :first, :id, :title  %>
     </div><hr>
     <div class="form-group">
       <%= f.label 'Date of transaction: ' %>
       <%= f.date_select :implemented_at, order: [:month, :day, :year], class: 'form-control' %>
     </div><hr>
     <div class="form-group">
-      <%= f.label 'Value: ' %>
-      <div class="input-group">
-        <span class="input-group-addon">$</span>
-        <%= f.text_field :value, class: 'form-control currency' %>
-      </div>
+      <%= f.label 'Value(in $): ' %>
+      <%= f.text_field :value, class: 'form-control money-form', pattern: '\d{0,5}\.*\d{1,2}' %>
     </div><hr>
     <div class="form-group">
       <%= f.label 'Note: ' %>
