--- a/web_pei_tracking/app/views/categories/_category.html.erb
+++ b/web_pei_tracking/app/views/categories/_category.html.erb
@@ -2,10 +2,10 @@
   <div class="card-header">
     <h5> <%= category.title %></h5>
   </div>
-  <p class="card-block card-block-category">
-    Type: <%= raw type_category_tag(category) %>
+  <p class="card-block padding-left">
+    Type: <%= raw type_tag(category) %>
   </p>
-  <p class="card-block card-block-category">
+  <p class="card-block padding-left">
     Transaction's count: <strong><%= category.capitals.count %></strong>
   </p>
   <div class="card-footer">
