--- a/web_pei_tracking/app/views/categories/_form.html.erb
+++ b/web_pei_tracking/app/views/categories/_form.html.erb
@@ -1,3 +1,17 @@
+<% if @category.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@category.errors.count, 'error') %> :
+      </h2>
+      <ul>
+        <% @category.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+    <hr>
+<% end %>
+
 <%= form_for [current_user, @category.becomes(Category)] do |f| %>
     <div class="form-group">
       <label>Category type:</label>
