added report page 10 hours ago

--- a/web_pei_tracking/app/views/components/_flash.html.erb
+++ b/web_pei_tracking/app/views/components/_flash.html.erb
@@ -1,4 +1,4 @@
-<div class="container text-center flash-message" id="flash-message">
+<div class="container text-center" id="flash-message">
   <% if flash[:notice] %>
       <div class="alert alert-success" role="alert"><%= flash[:notice] %></div>
   <% end %>
