--- a/web_pei_tracking/app/views/capitals/_filter_form.html.erb
+++ b/web_pei_tracking/app/views/capitals/_filter_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag user_report_path, method: 'get' do %>
+<%= form_tag user_report_path, method: 'get', remote: true do %>
     <div class="form-group">
       <%= label_tag 'Select category:' %>
       <%= grouped_collection_select :capital, :category_id,
