--- a/web_pei_tracking/app/views/report/show.html.erb
+++ b/web_pei_tracking/app/views/report/show.html.erb
@@ -6,26 +6,7 @@
       <hr>
       <%= render 'capitals/filter_form' %>
       <hr>
-      <table class="table">
-        <thead class="thead-default">
-          <tr>
-            <th>Type</th>
-            <th>Value</th>
-            <th>Category</th>
-            <th>Date</th>
-            <th>Note</th>
-          </tr>
-        </thead>
-        <tbody>
-          <div class="capitals">
-          <%= render partial: 'capitals/capital_row', collection: @capitals %>
-          </div>
-        <tr>
-          <th><h3>Total: </h3></th>
-          <th><h3><%= total_value(@capitals) %> $</h3></th>
-        </tr>
-        </tbody>
-      </table>
+      <%= render 'capitals/table' %>
     </div>
     <div class="col-md-1"></div>
   </div>
