--- a/web_pei_tracking/app/views/capitals/_filter_form.html.erb
+++ b/web_pei_tracking/app/views/capitals/_filter_form.html.erb
@@ -1,9 +1,14 @@
 <%= form_tag user_report_path, method: 'get' do %>
     <div class="form-group">
       <%= label_tag 'Select category:' %>
-      <%= grouped_collection_select :capital, :category_id,
-                                    [['Income',@incomes], ['Expense', @expenses]],
-                                    :second, :first, :id, :title, include_blank: true  %>
+      <%= grouped_collection_select :capital,
+                                    :category_id,
+                                    [['Income',@categories.first], ['Expense', @categories.last]],
+                                    :second,
+                                    :first,
+                                    :id,
+                                    :title,
+                                    include_blank: true  %>
       <%= label_tag 'Input date' %>
       <%= date_field :capital, :implemented_at %>
     </div>
