started to fix n+1

--- a/web_pei_tracking/app/views/categories/_category.html.erb
+++ b/web_pei_tracking/app/views/categories/_category.html.erb
@@ -6,7 +6,7 @@
     Type: <%= raw type_tag(category) %>
   </p>
   <p class="card-block padding-left">
-    Transaction's count: <strong><%= category.capitals.count %></strong>
+    Transaction's count: <strong><%= category.capitals.size %></strong>
   </p>
   <div class="card-footer">
     <%= link_to 'Edit', edit_user_category_path(current_user, category), class: 'btn btn-outline-warning category-link' %>
