--- a/web_pei_tracking/app/views/report/show.html.erb
+++ b/web_pei_tracking/app/views/report/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-1"></div>
     <div class="col-md-10 text-center">
-      <h2>Total report</h2>
+      <h2><%= t('report.title') %></h2>
       <hr>
       <%= render 'capitals/filter_form' %>
       <hr>
