--- a/web_pei_tracking/app/views/capitals/_filter_form.html.erb
+++ b/web_pei_tracking/app/views/capitals/_filter_form.html.erb
@@ -1,16 +1,16 @@
 <%= form_tag user_report_path, method: 'get' do %>
     <div class="form-group">
-      <%= label_tag 'Select category:' %>
+      <%= label_tag t('form.label.category') %>
       <%= grouped_collection_select :capital,
                                     :category_id,
-                                    [['Income',@categories.first], ['Expense', @categories.last]],
+                                    [[t('form.type.income'),@categories.first], [t('form.type.expense'), @categories.last]],
                                     :second,
                                     :first,
                                     :id,
                                     :title,
                                     include_blank: true  %>
-      <%= label_tag 'Input date' %>
+      <%= label_tag t('form.label.date') %>
       <%= date_field :capital, :implemented_at %>
     </div>
-    <%= submit_tag 'Search', name: nil, class: 'btn btn-outline-warning w-50' %>
+    <%= submit_tag t('form.button.search'), name: nil, class: 'btn btn-outline-warning w-50' %>
 <% end %>
