--- a/web_pei_tracking/app/views/capitals/_form.html.erb
+++ b/web_pei_tracking/app/views/capitals/_form.html.erb
@@ -1,7 +1,7 @@
 <% if @capital.errors.any? %>
     <div id="error_explanation">
       <h2>
-        <%= pluralize(@capital.errors.count, 'error') %> :
+        <%= pluralize(@capital.errors.count, t('form.error')) %> :
       </h2>
       <ul>
         <% @capital.errors.full_messages.each do |msg| %>
@@ -18,31 +18,31 @@
       <%= f.radio_button :type, 'Expense'%>
     </div>
     <div class="form-group">
-      <%= f.label 'Choose a category: ' %>
-      <%= f.grouped_collection_select :category_id,[['Income',@categories.first], ['Expense', @categories.last]],
+      <%= f.label t('form.label.category') %>
+      <%= f.grouped_collection_select :category_id,[[t('form.type.income'),@categories.first], [t('form.type.expense'), @categories.last]],
                                       :second,
                                       :first,
                                       :id,
                                       :title %>
     </div><hr>
     <div class="form-group">
-      <%= f.label 'Date of transaction: ' %>
+      <%= f.label t('form.label.date') %>
       <%= f.date_select :implemented_at, order: [:month, :day, :year], class: 'form-control' %>
     </div><hr>
     <div class="form-group">
-      <%= f.label 'Value(in $): ' %>
+      <%= f.label t('form.label.value') %>
       <%= f.text_field :value, class: 'form-control money-form', pattern: '\d{0,5}\.*\d{1,2}' %>
     </div><hr>
     <div class="form-group">
-      <%= f.label 'Note: ' %>
+      <%= f.label t('form.label.note') %>
       <%= f.text_area :note, class: 'form-control'%>
     </div><hr>
     <div class="form-group row">
       <div class="col-md-6">
-        <%= link_to 'Cancel', root_path, class: 'btn btn-outline-info w-100' %>
+        <%= link_to t('form.button.cancel'), root_path, class: 'btn btn-outline-info w-100' %>
       </div>
       <div class="col-md-6">
-        <%= f.submit 'Submit', class: 'btn btn-outline-warning w-100' %>
+        <%= f.submit t('form.button.submit'), class: 'btn btn-outline-warning w-100' %>
       </div>
     </div>
 <% end %>
