--- a/web_pei_tracking/app/views/capitals/edit.html.erb
+++ b/web_pei_tracking/app/views/capitals/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-3"></div>
     <div class="col-md-6">
       <div class="container category-form">
-        <h3>Edit transaction</h3>
+        <h3><%= t('capital.edit') %></h3>
         <hr>
         <%= render 'form' %>
       </div>
